@@ -17,41 +17,9 @@ function getCookie(name) {
     // document.getElementById("themeSelect").value = storedOption;
     document.documentElement.setAttribute('data-bs-theme', storedOption);
   }
-form = document.getElementById("form");
-username = document.getElementById("username");
-email = document.getElementById("email");
-password = document.getElementById("password");
-passwordConfirm = document.getElementById("passwordConfirm");
-form.addEventListener("submit", () => {
-    const register = {
-        username: username.value,
-        email: email.value,
-        password: password.value,
-        passwordConfirm: passwordConfirm.value
-    }
-    fetch ("/auth/register",{
-        method: "POST",
-        body: JSON.stringify(register),
-        headers: {
-            "Content-Type": "application/json"
-        }
-    }).then(res => res.json())
-        .then(data =>{
-             if (data.status == "error") {
-                success.style.display = "none"
-                error.style.display = "block"
-                error.innerText = data.error
-             } else{
-                error.style.display = "none"
-                success.style.display = "block"
-                success.innerText = data.success
-                window.location.href = "/app"
-             }
-        })
-})
 
-  // say hi :
-  fetch('/userdata')
+    // say hi :
+    fetch('/userdata')
     .then(response => {
         if (!response.ok) {
             throw new Error('Network response was not ok');
