@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Remote Server Configuration WebApp</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./scss/custom.css" />
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-black sticky-top p-3">
+<body class="bg-body">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top p-3 shadow">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Novaterm AI</a>
+          <a class="navbar-brand" href="#">Novaterm AI - <span id="user_username">hello</span></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -18,6 +19,7 @@
                 <a class="nav-link" href="./main.html">Home</a>
               <a class="nav-link" href="./login.html">Login</a>
               <a class="nav-link" href="./register.html">Register</a>
+              <a class="nav-link" href="/app">App</a>
             </div>
           </div>
         </div>
@@ -25,9 +27,9 @@
 
     <div class="container h-100 d-flex justify-content-center align-items-center my-5">
         <div class="col-lg-9 p-3 center">
-            <div class="container bg-body-secondary rounded-4 shadow">
+            <div class="container bg-body-secondary border border-secondary rounded-4 shadow">
                 <div class="row p-3">
-                    <h2 class="display-3 text-center mb-4"><i class="bi bi-terminal-fill"></i>&nbsp;Remote Server Configuration WebApp</h2>
+                    <h2 class="display-3 text-center mb-4"><i class="bi bi-terminal-fill"></i>&nbsp;Remote Server Configuration</h2>
 
                     <div class="col p-3">
                         <p>Welcome to the Remote Server Configuration WebApp! This project allows you to remotely connect to servers via SSH and perform various configuration tasks through a user-friendly web interface.</p>
@@ -84,5 +86,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
