@@ -25,25 +25,26 @@
     <!-- <script src="../static/bootstrap/dist/js/bootstrap.min.js"></script> -->
   </head>
 
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-black sticky-top p-3">
+  <body class="bg-body">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top p-3 shadow">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Novaterm AI</a>
+          <a class="navbar-brand" href="#">Novaterm AI - <span id="user_username">hello</span></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link" href="./main.html">Home</a>
+            <a class="nav-link" href="./main.html">Home</a>
               <a class="nav-link" href="./login.html">Login</a>
               <a class="nav-link" href="./register.html">Register</a>
+              <a class="nav-link" href="/app">App</a>
             </div>
           </div>
         </div>
     </nav>
     <div class="container h-100 d-flex justify-content-center align-items-center my-5">
         <div class="col-lg-9 p-3 center">
-            <div class="container bg-body-secondary  rounded-4 shadow">
+            <div class="container bg-body-secondary border border-secondary rounded-4 shadow">
                 <div class="row p-3">
                     <h2 class="display-3 text-center mb-4"><i class="bi bi-person-plus-fill"></i>&nbsp;Register</h2>
 
@@ -95,8 +96,8 @@
                                                     <button type="button" class="btn btn-secondary rounded-pill" ">Back to Login</button>
                                                 </div>
                                             </a>
-                                            <div class="alert alert-danger" role="alert" id="error" style="display: none;"></div>
-                                            <div class="alert alert-success" role="alert" id="success" style="display: none;"></div>
+                                            <div class="alert alert-danger mt-3" role="alert" id="error" style="display: none;"></div>
+                                            <div class="alert alert-success mt-3" role="alert" id="success" style="display: none;"></div>
                                         </div>
                                     </div>
                                 </form>
