@@ -29,3 +29,7 @@ added iptables rule generator, enhanced appearences
 fixed broadcast out put ( io.emit for everyone, socket.emit to a specific connection)
 
 fixed double text after connecting / disconnecting (conn.shell connect variable error)
+
+added login, register, main page
+
+fixed seperated recent connections for each user 
